Update delete call for Swagger
